created signin api route

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO = 'mongodb+srv://saranistardust:Sashwerni!1884@cluster0.qztay.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+
+JWT_SECRET = 'saranistardust'
